Add machine translation

--- a/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
@@ -2075,14 +2075,15 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/cdi-reference.adoc:913
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Injecting Multiple Bean Instances Intuitively"
-msgstr ""
+msgstr "複数のBeanインスタンスを直観的にインジェクトする"
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:919
+#, fuzzy
 msgid "In CDI, it's possible to inject multiple bean instances (aka contextual references) via the `javax.enterprise.inject.Instance` which implements `java.lang.Iterable`.  However, it's not exactly intuitive.  Therefore, a new way was introduced in Quarkus - you can inject a `java.util.List` annotated with the `io.quarkus.arc.All` qualifier.  The type of elements in the list is used as the required type when performing the lookup."
-msgstr ""
+msgstr "CDIでは、 `java.lang.Iterable` を実装した `javax.enterprise.inject.Instance` を介して、複数のBeanインスタンス(別名：コンテキストリファレンス)を注入することが可能です。しかし、これは必ずしも直感的ではありません。そこで、Quarkusでは新しい方法を導入しました。それは、 `io.quarkus.arc.All` の修飾子でアノテーションされた `java.util.List` を注入することです。リスト内の要素の型は、検索を行う際に必要な型として使用されます。"
 
 #. type: delimited block -
 #: upstream/_guides/cdi-reference.adoc:924
@@ -2115,28 +2116,33 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:931
+#, fuzzy
 msgid "The injected instance is an _immutable list_ of the contextual references of the _disambiguated_ beans."
-msgstr ""
+msgstr "注入されたインスタンスは、 _曖昧さを排除した_Beanの文脈参照の _不変のリスト_です。"
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:932
+#, fuzzy
 msgid "For this injection point the required type is `Service` and no additional qualifiers are declared."
-msgstr ""
+msgstr "この注入ポイントでは、必要なタイプは `Service` で、追加の修飾子は宣言されていません。"
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:934
+#, fuzzy
 msgid "By default, the list of beans is sorted by priority as defined by `io.quarkus.arc.InjectableBean#getPriority()`. Higher priority goes first. In general, the `@javax.annotation.Priority` and `@io.quarkus.arc.Priority` annotations can be used to assign the priority to a class bean, producer method or producer field."
-msgstr ""
+msgstr "デフォルトでは、ビーンズのリストは、 `io.quarkus.arc.InjectableBean#getPriority()` で定義された優先順位でソートされます。優先度の高いものが先になります。一般的には、 `@javax.annotation.Priority` および `@io.quarkus.arc.Priority` アノテーションを使用して、クラスBean、プロデューサ・メソッド、またはプロデューサ・フィールドに優先順位を割り当てることができます。"
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:936
+#, fuzzy
 msgid "If an injection point declares no other qualifier than `@All` then `@Any` is used, i.e. the behavior is equivalent to `@Inject @Any Instance<Service>`."
-msgstr ""
+msgstr "注入ポイントが `@All` 以外の修飾子を宣言していない場合、 `@Any` が使用されます。つまり、動作は `@Inject @Any Instance&amp;lt;Service&amp;gt;` と同等です。"
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:939
+#, fuzzy
 msgid "You can also inject a list of bean instances wrapped in `io.quarkus.arc.InstanceHandle`.  This can be useful if you need to inspect the related bean metadata."
-msgstr ""
+msgstr "また、 `io.quarkus.arc.InstanceHandle` で包まれたBeanインスタンスのリストを注入することもできます。これは、関連するBeanのメタデータを検査する必要がある場合に便利です。"
 
 #. type: delimited block -
 #: upstream/_guides/cdi-reference.adoc:948
