--- a/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
@@ -214,8 +214,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:144
+#, fuzzy
 msgid "Beside generating a `Deployment` resource, you can also choose to get a `StatefulSet` instead via `application.properties`:"
-msgstr ""
+msgstr "`Deployment` リソースを生成する以外にも、 `application.properties` を介して `StatefulSet` を取得することもできます。"
 
 #. type: delimited block -
 #: upstream/_guides/deploying-to-kubernetes.adoc:148
