--- a/l10n/po/ja_JP/_guides/dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-services.adoc.po
@@ -122,9 +122,9 @@ msgstr "Keycloak Dev Serviceは、アプリケーションに `quarkus-oidc` エ
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:71
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Kogito"
-msgstr ""
+msgstr "コギト"
 
 #. type: Plain text
 #: upstream/_guides/dev-services.adoc:74
