--- a/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
@@ -691,19 +691,21 @@ msgstr "VS Codeでプロジェクトディレクトリーを開きます。Java 
 
 #. type: Title ==
 #: upstream/_guides/gradle-tooling.adoc:349
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Downloading dependencies for offline development and testing"
-msgstr ""
+msgstr "オフラインでの開発やテストのための依存ファイルのダウンロード"
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:354
+#, fuzzy
 msgid "Quarkus extension dependencies are divided into the runtime extension dependencies that end up on the application runtime classpath and the deployment (or build time) extension dependencies that are resolved by Quarkus only at application build time to create the build classpath. Application developers are expected to express dependencies only on the runtime artifacts of Quarkus extensions."
-msgstr ""
+msgstr "Quarkusの拡張機能の依存性は、アプリケーションのランタイムクラスパス上で終わるランタイム拡張機能の依存性と、ビルドクラスパスを作成するためにアプリケーションのビルド時にQuarkusによってのみ解決される配置（またはビルド時）拡張機能の依存性に分けられます。アプリケーション開発者は、Quarkusの拡張機能のランタイムアーティファクトにのみ依存性を表現することが期待されます。"
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:356
+#, fuzzy
 msgid "To enable the use-case of building and testing a Quarkus application offline, the plugin includes the `quarkusGoOffline` task that could be called from the command line like this:"
-msgstr ""
+msgstr "オフラインでQuarkusアプリケーションを構築してテストするというユースケースを可能にするために、プラグインには `quarkusGoOffline` タスクが含まれており、コマンドラインから次のように呼び出すことができます。"
 
 #. type: delimited block -
 #: upstream/_guides/gradle-tooling.adoc:360
@@ -714,8 +716,9 @@ msgstr "./gradlew build\n"
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:364
+#, fuzzy
 msgid "This task will resolve all the runtime, build time, test and dev mode dependencies of the application to the Gradle cache.  Once executed, you will be able to safely run quarkus task with `--offline` flag."
-msgstr ""
+msgstr "このタスクは、アプリケーションのランタイム、ビルドタイム、テスト、開発モードのすべての依存関係をGradleのキャッシュに解決します。実行すると、 `--offline` フラグを付けて quarkus タスクを安全に実行できるようになります。"
 
 #. type: Title ==
 #: upstream/_guides/gradle-tooling.adoc:365
