--- a/l10n/po/ja_JP/_guides/grpc-service-implementation.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-service-implementation.adoc.po
@@ -667,25 +667,27 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/grpc-service-implementation.adoc:331
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "gRPC Server metrics"
-msgstr ""
+msgstr "gRPCサーバーのメトリクス"
 
 #. type: Title ===
 #: upstream/_guides/grpc-service-implementation.adoc:333
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Enabling metrics collection"
-msgstr ""
+msgstr "メトリクスの収集を可能にする"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-implementation.adoc:337
+#, fuzzy
 msgid "gRPC server metrics are automatically enabled when the application also uses the xref:micrometer.adoc[`quarkus-micrometer`] extension.  Micrometer collects the metrics of all the gRPC services implemented by the application."
-msgstr ""
+msgstr "アプリケーションが拡張機能を使用している場合、gRPCサーバーメトリクスが自動的に有効になります。  link:micrometer.html[`quarkus-micrometer`]拡張機能です。Micrometerは、アプリケーションが実装するすべてのgRPCサービスのメトリクスを収集します。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-implementation.adoc:339
+#, fuzzy
 msgid "As an example, if you export the metrics to Prometheus, you will get:"
-msgstr ""
+msgstr "例として、メトリクスをPrometheusにエクスポートすると、以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-implementation.adoc:355
@@ -708,19 +710,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-implementation.adoc:358
+#, fuzzy
 msgid "The service name, method and type can be found in the _tags_."
-msgstr ""
+msgstr "サービス名、方法、タイプは _タグ_で確認できます。"
 
 #. type: Title ===
 #: upstream/_guides/grpc-service-implementation.adoc:359
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Disabling metrics collection"
-msgstr ""
+msgstr "メトリクス収集の無効化"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-implementation.adoc:362
+#, fuzzy
 msgid "To disable the gRPC server metrics when `quarkus-micrometer` is used, add the following property to the application configuration:"
-msgstr ""
+msgstr "`quarkus-micrometer` を使用しているときに gRPC サーバーメトリクスを無効にするには、アプリケーションの設定に以下のプロパティを追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-implementation.adoc:366
