--- a/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
@@ -1789,5 +1789,6 @@ msgstr "AWSインテグレーションの構成"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:889
+#, fuzzy
 msgid "Please see link:{hibernate-search-orm-elasticsearch-aws-guide}#aws-configuration-reference[the documentation for the Hibernate Search ORM + Elasticsearch AWS extension]."
-msgstr ""
+msgstr "link:{hibernate-search-orm-elasticsearch-aws-guide}#aws-configuration-reference[Hibernate Search ORM + Elasticsearch AWS extension」のドキュメント]をご覧ください。"
