--- a/l10n/po/ja_JP/_guides/kafka-reactive-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-reactive-getting-started.adoc.po
@@ -450,8 +450,9 @@ msgstr "指定する必要があるのは、 `smallrye-kafka` のコネクタだ
 
 #. type: Plain text
 #: upstream/_guides/kafka-reactive-getting-started.adoc:211
+#, fuzzy
 msgid "When you have multiple connectors, you would need to indicate which connector you want to use in the application configuration."
-msgstr ""
+msgstr "複数のコネクタがある場合は、アプリケーションの設定でどのコネクタを使用するかを指定する必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/kafka-reactive-getting-started.adoc:212
@@ -608,13 +609,15 @@ msgstr "この設定についての詳細は、Kafka のドキュメントの li
 
 #. type: Plain text
 #: upstream/_guides/kafka-reactive-getting-started.adoc:285
+#, fuzzy
 msgid "`mp.messaging.incoming.requests.auto.offset.reset=earliest` instructs the application to start reading the topics from the first offset, when there is no committed offset for the consumer group.  In other words, it will also process messages sent before we start the processor application."
-msgstr ""
+msgstr "`mp.messaging.incoming.requests.auto.offset.reset=earliest` は、コンシューマ・グループにコミットされたオフセットがない場合に、最初のオフセットからトピックの読み取りを開始するようアプリケーションに指示します。つまり、プロセッサ・アプリケーションを起動する前に送られてきたメッセージも処理することになります。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-reactive-getting-started.adoc:288
+#, fuzzy
 msgid "There is no need to set serializers or deserializers.  Quarkus detects them, and if none are found, generates them using JSON serialization."
-msgstr ""
+msgstr "シリアライザやデシリアライザを設定する必要はありません。Quarkusはそれらを検出し、見つからない場合は、JSONシリアライゼーションを使用して生成します。"
 
 #. type: Title ==
 #: upstream/_guides/kafka-reactive-getting-started.adoc:289
@@ -682,8 +685,9 @@ msgstr "ストリームを返す _（Reactive Stream_"
 
 #. type: Plain text
 #: upstream/_guides/kafka-reactive-getting-started.adoc:318
+#, fuzzy
 msgid "No need to configure anything, as Quarkus will automatically associate the `quotes` channel to the `quotes` Kafka topic.  It will also generate a deserializer for the `Quote` class."
-msgstr ""
+msgstr "Quarkusは `quotes` チャンネルを `quotes` Kafkaトピックに自動的に関連付けますので、何も設定する必要はありません。また、 `Quote` クラスのデシリアライザも生成されます。"
 
 #. type: Block title
 #: upstream/_guides/kafka-reactive-getting-started.adoc:321
