--- a/l10n/po/ja_JP/_guides/kogito.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito.adoc.po
@@ -959,5 +959,6 @@ msgstr "https://docs.jboss.org/kogito/release/latest/html_single[Kogito Document
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:481
+#, fuzzy
 msgid "xref:kogito-dev-services.adoc[Kogito Dev Services]"
-msgstr ""
+msgstr "link:kogito-dev-services.html[コギト開発サービス]"
