--- a/l10n/po/ja_JP/_guides/kotlin.adoc.po
+++ b/l10n/po/ja_JP/_guides/kotlin.adoc.po
@@ -721,14 +721,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/kotlin.adoc:382
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Kotlin and the Kubernetes Client"
-msgstr ""
+msgstr "KotlinとKubernetesクライアント"
 
 #. type: Plain text
 #: upstream/_guides/kotlin.adoc:385
+#, fuzzy
 msgid "When working with the `quarkus-kubernetes` extension and have Kotlin classes bound to CustomResource definitions (like you do for building operators), you need to be aware that the underlying Fabric8 Kubernetes Client uses its own static Jackson `ObjectMapper` s, which can be configured as follows with the `KotlinModule`:"
-msgstr ""
+msgstr "`quarkus-kubernetes` エクステンションを使用して、Kotlin クラスを CustomResource 定義にバインドする場合（演算子を構築する場合のように）、基盤となる Fabric8 Kubernetes Client が独自の静的な Jackson `ObjectMapper` を使用することに注意する必要があります。これは `KotlinModule`.NET を使用して以下のように設定できます。"
 
 #. type: delimited block -
 #: upstream/_guides/kotlin.adoc:390
@@ -748,8 +749,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kotlin.adoc:398
+#, fuzzy
 msgid "_Please test this carefully on compilation to native images and fallback to Java-compatible Jackson bindings if you experience problems._"
-msgstr ""
+msgstr "_ネイティブイメージへのコンパイル時には慎重にテストし、問題が発生した場合はJava互換のJacksonバインディングにフォールバックしてください。_"
 
 #. type: Title ==
 #: upstream/_guides/kotlin.adoc:399
@@ -764,14 +766,15 @@ msgstr "Kotlinのコルーチンは、非同期でリアクティブな方法で
 
 #. type: Title ==
 #: upstream/_guides/kotlin.adoc:404
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "RESTEasy Reactive and Coroutines"
-msgstr ""
+msgstr "RESTEasy リアクティブとコルーチン"
 
 #. type: Plain text
 #: upstream/_guides/kotlin.adoc:407
+#, fuzzy
 msgid "The `quarkus-resteasy-reactive` extension supports Kotlin `suspend fun` ctions in combination with `quarkus-kotlin` as well:"
-msgstr ""
+msgstr "`quarkus-resteasy-reactive` 拡張機能では、Kotlin `suspend fun` ctions を `quarkus-kotlin` と組み合わせてサポートしています。"
 
 #. type: delimited block -
 #: upstream/_guides/kotlin.adoc:412
