--- a/l10n/po/ja_JP/_guides/kubernetes-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/kubernetes-client.adoc.po
@@ -497,14 +497,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/kubernetes-client.adoc:307
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Note on using Elliptic Curve keys"
-msgstr ""
+msgstr "楕円曲線キー使用時の注意点"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:310
+#, fuzzy
 msgid "Please note that if you would like to use Elliptic Curve keys with Kubernetes Client then adding a BouncyCastle PKIX dependency is required:"
-msgstr ""
+msgstr "なお、Kubernetes Clientで楕円曲線鍵を使用したい場合は、BouncyCastle PKIXの依存関係を追加する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:317
@@ -518,13 +519,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:320
+#, fuzzy
 msgid "Note that internally an `org.bouncycastle.jce.provider.BouncyCastleProvider` provider will be registered if it has not already been registered."
-msgstr ""
+msgstr "なお、内部的には、 `org.bouncycastle.jce.provider.BouncyCastleProvider` プロバイダーがまだ登録されていない場合に登録されます。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:322
+#, fuzzy
 msgid "You can have this provider registered as described in the xref:security-customization.adoc#bouncy-castle[BouncyCastle] or xref:security-customization.adoc#bouncy-castle-fips[BouncyCastle FIPS] sections."
-msgstr ""
+msgstr "link:security-customization.html#bouncy-castle[BouncyCastle]または link:security-customization.html#bouncy-castle-fips[BouncyCastle FIPS]のセクションで説明したように、このプロバイダーを登録させることができます。"
 
 #. type: Title ==
 #: upstream/_guides/kubernetes-client.adoc:323
