--- a/l10n/po/ja_JP/_guides/quarkus-runtime-base-image.adoc.po
+++ b/l10n/po/ja_JP/_guides/quarkus-runtime-base-image.adoc.po
@@ -21,45 +21,51 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/quarkus-runtime-base-image.adoc:6
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Quarkus Base Runtime Image"
-msgstr ""
+msgstr "Quarkus Base Runtime Image"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-runtime-base-image.adoc:12
+#, fuzzy
 msgid "To ease the containerization of native executables, Quarkus provides a base image providing the requirements to run these executables.  The `quarkus-micro-image:1.0` image is:"
-msgstr ""
+msgstr "ネイティブ実行ファイルのコンテナ化を容易にするために、Quarkusはこれらの実行ファイルを実行するための要件を提供するベースイメージを提供しています。 `quarkus-micro-image:1.0` のイメージです。"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-runtime-base-image.adoc:14
+#, fuzzy
 msgid "small (based on `ubi8-micro`)"
-msgstr ""
+msgstr "小型 （ `ubi8-micro` に基づく）"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-runtime-base-image.adoc:15
+#, fuzzy
 msgid "designed for containers"
-msgstr ""
+msgstr "コンテナ用デザイン"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-runtime-base-image.adoc:16
+#, fuzzy
 msgid "contains the right set of dependencies (glibc, libstdc++, zlib)"
-msgstr ""
+msgstr "正しい依存関係のセット（glibc, libstdc++, zlib）が含まれていること。"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-runtime-base-image.adoc:17
+#, fuzzy
 msgid "support upx-compressed executables (more details on the xref:upx.adoc[enabling compression documentation])"
-msgstr ""
+msgstr "upxで圧縮された実行ファイルのサポート（詳細は link:upx.html[圧縮を有効にするためのドキュメント]を参照してください。）"
 
 #. type: Title ==
 #: upstream/_guides/quarkus-runtime-base-image.adoc:18
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Using the base image"
-msgstr ""
+msgstr "ベースイメージの利用"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-runtime-base-image.adoc:21
+#, fuzzy
 msgid "In your `Dockerfile`, just use:"
-msgstr ""
+msgstr "`Dockerfile` の中では、ただ"
 
 #. type: delimited block -
 #: upstream/_guides/quarkus-runtime-base-image.adoc:30
@@ -75,14 +81,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/quarkus-runtime-base-image.adoc:32
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Extending the image"
-msgstr ""
+msgstr "イメージの拡張"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-runtime-base-image.adoc:37
+#, fuzzy
 msgid "Your application may have additional requirements.  For example, if you have an application that requires `libfreetype.so`, you need to copy the native libraries to the container.  In this case, you need to use a multi-stage `dockerfile` to copy the required libraries:"
-msgstr ""
+msgstr "アプリケーションには追加の要件があるかもしれません。たとえば、 `libfreetype.so` を必要とするアプリケーションがある場合、ネイティブライブラリをコンテナにコピーする必要があります。この場合、必要なライブラリをコピーするために、多段式の `dockerfile` を使用する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/quarkus-runtime-base-image.adoc:43
@@ -120,8 +127,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/quarkus-runtime-base-image.adoc:60
+#, fuzzy
 msgid "If you need to have access to the full AWT support, you need more than just `libfreetype.so`, but also the font and font configurations:"
-msgstr ""
+msgstr "AWTのフルサポートにアクセスする必要がある場合は、 `libfreetype.so` だけでなく、フォントやフォント設定も必要です。"
 
 #. type: delimited block -
 #: upstream/_guides/quarkus-runtime-base-image.adoc:66
