--- a/l10n/po/ja_JP/_guides/rabbitmq-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/rabbitmq-reference.adoc.po
@@ -908,19 +908,21 @@ msgstr "なお、メッセージ処理の失敗は、メッセージをジャッ
 
 #. type: Title ==
 #: upstream/_guides/rabbitmq-reference.adoc:397
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Dynamic Credentials"
-msgstr ""
+msgstr "ダイナミック・クレデンシャル"
 
 #. type: Plain text
 #: upstream/_guides/rabbitmq-reference.adoc:401
+#, fuzzy
 msgid "Quarkus and the RabbitMQ connector support https://www.vaultproject.io/docs/secrets/rabbitmq[Vault's RabbitMQ secrets engine] for generating short-lived dynamic credentials. This allows Vault to create and retire RabbitMQ credentials on a regular basis."
-msgstr ""
+msgstr "QuarkusとRabbitMQコネクタは、短命のダイナミッククレデンシャルを生成する link:https://www.vaultproject.io/docs/secrets/rabbitmq[VaultのRabbitMQシークレットエンジン]をサポートしています。これにより、Vaultは定期的にRabbitMQの認証情報を作成、破棄することができます。"
 
 #. type: Plain text
 #: upstream/_guides/rabbitmq-reference.adoc:405
+#, fuzzy
 msgid "First we need to enable Vault's `rabbitmq` secret engine, configure it with RabbitMQ's connection and authentication information, and create a Vault role `my-role` (replace `10.0.0.3` by the actual host that is running the RabbitMQ container):"
-msgstr ""
+msgstr "まず、Vaultの `rabbitmq` シークレットエンジンを有効にし、RabbitMQの接続と認証情報で構成し、Vaultのロール `my-role` を作成する必要があります（ `10.0.0.3` は、RabbitMQコンテナを実行している実際のホストに置き換えてください）。"
 
 #. type: delimited block -
 #: upstream/_guides/rabbitmq-reference.adoc:408
@@ -948,13 +950,15 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/rabbitmq-reference.adoc:422
+#, fuzzy
 msgid "For this use case, user `guest` configured above needs to be a RabbitMQ admin user with the capability to create credentials."
-msgstr ""
+msgstr "このユースケースでは、上記で設定したユーザー `guest` は、クレデンシャルを作成する機能を持つRabbitMQの管理者ユーザーである必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/rabbitmq-reference.adoc:425
+#, fuzzy
 msgid "Then we need to give a read capability to the Quarkus application on path `rabbitmq/creds/my-role`."
-msgstr ""
+msgstr "そして、パス `rabbitmq/creds/my-role` のQuarkusアプリケーションに読み取り機能を与える必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/rabbitmq-reference.adoc:435
@@ -972,13 +976,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/rabbitmq-reference.adoc:439
+#, fuzzy
 msgid "Now that Vault knows how to create users in RabbitMQ, we need to configure Quarkus to use a credentials-provider for RabbitMQ."
-msgstr ""
+msgstr "VaultがRabbitMQでユーザーを作成する方法を理解したので、QuarkusがRabbitMQのcredentials-providerを使用するように設定する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/rabbitmq-reference.adoc:441
+#, fuzzy
 msgid "First we tell Quarkus to request dynamic credentials using a credentials-provider named `rabbitmq`."
-msgstr ""
+msgstr "まず、 `rabbitmq` という名前のクレデンシャルプロバイダを使用して、ダイナミックなクレデンシャルを要求するようにQuarkusに指示します。"
 
 #. type: delimited block -
 #: upstream/_guides/rabbitmq-reference.adoc:443
@@ -988,8 +994,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/rabbitmq-reference.adoc:447
+#, fuzzy
 msgid "Next we configure the `rabbitmq` credentials provider. The `credentials-role` option must be set to the name of the role we created in Vault, in our case `my-role`. The `credentials-mount` option must be set to `rabbitmq`."
-msgstr ""
+msgstr "次に、 `rabbitmq` 認証情報プロバイダを設定します。 `credentials-role` オプションには、Vaultで作成したロールの名前を設定する必要があります。ここでは、 `my-role` を設定します。 `credentials-mount` オプションは `rabbitmq` に設定する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/rabbitmq-reference.adoc:451
@@ -1001,8 +1008,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/rabbitmq-reference.adoc:456
+#, fuzzy
 msgid "The `credentials-mount` is used directly as the mount of the secret engine in Vault. Here we are using the default mount path of `rabbitmq`. If the RabbitMQ secret engine was mounted at a custom path, the `credentials-mount` option must be set to that path instead."
-msgstr ""
+msgstr "`credentials-mount` は Vault のシークレットエンジンのマウントとして直接使用されます。ここでは、デフォルトのマウントパスである `rabbitmq` を使用しています。RabbitMQ シークレットエンジンがカスタムパスでマウントされている場合は、代わりに `credentials-mount` オプションにそのパスを設定する必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/rabbitmq-reference.adoc:458
@@ -1341,12 +1349,12 @@ msgstr "<span class=\"no-hyphens\"> *ユーザー名*</span>"
 #. type: Table
 #: upstream/_guides/rabbitmq-reference.adoc:522
 #: upstream/_guides/rabbitmq-reference.adoc:825
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "The name of the RabbitMQ Credentials Provider bean used to provide dynamic credentials to the RabbitMQ client\n"
 "\n"
 "Type: _string_"
-msgstr ""
+msgstr "RabbitMQ クライアントに動的認証情報を提供するために使用される RabbitMQ Credentials Provider Bean の名前。"
 
 #. type: Table
 #: upstream/_guides/rabbitmq-reference.adoc:524
