--- a/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
@@ -1101,8 +1101,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:595
+#, fuzzy
 msgid "Also, there is a reactive flavor of `ClientHeadersFactory` that allows doing blocking operations. For example:"
-msgstr ""
+msgstr "また、 `ClientHeadersFactory` には、ブロッキング操作を可能にするリアクティブなフレーバーがあります。例えば、以下のようなものです。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:609
