--- a/l10n/po/ja_JP/_guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/resteasy-reactive.adoc.po
@@ -3555,14 +3555,15 @@ msgstr ""
 
 #. type: Title ====
 #: upstream/_guides/resteasy-reactive.adoc:1828
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Handling dates"
-msgstr ""
+msgstr "取扱日"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:1832
+#, fuzzy
 msgid "RESTEasy Reactive supports the use of the implementations of `java.time.Temporal` (like `java.time.LocalDateTime`) as query, path or form params. Furthermore it provides the `@org.jboss.resteasy.reactive.DateFormat` annotation which can be used to set a custom expected pattern (otherwise the JDK's default format for each type is used implicitly)."
-msgstr ""
+msgstr "RESTEasy Reactiveでは、 `java.time.Temporal` （ `java.time.LocalDateTime` のような）の実装を、クエリ、パス、フォームのパラメータとして使用することをサポートしています。さらに、 `@org.jboss.resteasy.reactive.DateFormat` アノテーションを提供しており、これを使用してカスタムの期待されるパターンを設定することができます（そうしないと、各タイプに対する JDK のデフォルトフォーマットが暗黙のうちに使用されます）。"
 
 #. type: Title ===
 #: upstream/_guides/resteasy-reactive.adoc:1833
