--- a/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
@@ -139,8 +139,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:58
+#, fuzzy
 msgid "A more compact way to configure the token endpoint URL without the discovery is to set `quarkus.oidc-client.token-path` to an absolute URL:"
-msgstr ""
+msgstr "ディスカバリーを行わずにトークンのエンドポイントURLを設定するよりコンパクトな方法は、 `quarkus.oidc-client.token-path` を絶対的なURLに設定することです。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-client.adoc:62
@@ -150,8 +151,9 @@ msgstr "`OidcClient` は、トークンのエンドポイントURLが `&lt;a hre
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:65
+#, fuzzy
 msgid "Setting 'quarkus.oidc-client.auth-server-url' and 'quarkus.oidc-client.discovery-enabled' is not required in this case."
-msgstr ""
+msgstr "この場合、「quarkus.oidc-client.auth-server-url」と「quarkus.oidc-client.discovery-enabled」の設定は必要ありません。"
 
 #. type: Title ===
 #: upstream/_guides/security-openid-connect-client.adoc:66
