--- a/l10n/po/ja_JP/_guides/smallrye-kafka-incoming.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-kafka-incoming.adoc.po
@@ -642,18 +642,18 @@ msgstr "<span class=\"no-hyphens\"> *リトライ*</span>"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-incoming.adoc:137
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "When `partitions` is greater than 1, this attribute allows configuring how many records are requested by each consumers every time.\n"
 "\n"
 "Type: _int_"
-msgstr ""
+msgstr "`partitions` が 1 より大きい場合、この属性により、各消費者が毎回要求するレコードの数を設定することができます。"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-incoming.adoc:139
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`128`"
-msgstr ""
+msgstr "`128`"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-incoming.adoc:139
