--- a/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
+++ b/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
@@ -355,8 +355,9 @@ msgstr ""
 #: upstream/_guides/tests-with-coverage.adoc:177
 #: upstream/_guides/tests-with-coverage.adoc:250
 #: upstream/_guides/tests-with-coverage.adoc:407
+#, fuzzy
 msgid "If you are using Gradle, add this to your `build.gradle`:"
-msgstr ""
+msgstr "Gradleを使用している場合は、 `build.gradle` にこれを追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/tests-with-coverage.adoc:181
@@ -488,13 +489,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:267
+#, fuzzy
 msgid "Add the `jacoco` gradle plugin"
-msgstr ""
+msgstr "`jacoco` gradleプラグインの追加"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:269
+#, fuzzy
 msgid "Set this config to `false` if you are also using the `quarkus-jacoco` extension and have at least one `@QuarkusTest`.  The default `jacocoTestReport` task can be skipped since `quarkus-jacoco` will generate the combined report of regular unit tests and `@QuarkusTest` classes since the execution data is recorded in the same file."
-msgstr ""
+msgstr "`quarkus-jacoco` 拡張機能も使用していて、少なくとも 1 つの `@QuarkusTest` がある場合は、このコンフィグを `false` に設定します。デフォルトの `jacocoTestReport` タスクは省略できます。なぜなら `quarkus-jacoco` は通常のユニットテストと `@QuarkusTest` クラスの実行データが同じファイルに記録されているため、それらを組み合わせたレポートを生成するからです。"
 
 #. type: Title ===
 #: upstream/_guides/tests-with-coverage.adoc:270
@@ -711,8 +714,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:431
+#, fuzzy
 msgid "Excluding classes from the verification task can be configured as following:"
-msgstr ""
+msgstr "検証タスクからクラスを除外するには、以下のように設定します。"
 
 #. type: delimited block -
 #: upstream/_guides/tests-with-coverage.adoc:443
@@ -731,18 +735,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:445
+#, fuzzy
 msgid "`classDirectories` needs to be read after evaluation phase in Gradle"
-msgstr ""
+msgstr "`classDirectories` は、Gradle の評価フェーズの後に読み込まれる必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:446
+#, fuzzy
 msgid "Currently, there is a bug in Gradle JaCoCo which requires the `excludes` to be specified in this manner - https://github.com/gradle/gradle/issues/14760.  Once this issue is fixed, excludes"
-msgstr ""
+msgstr "現在、Gradle JaCoCoには、 `excludes` をこのように指定しなければならないというバグがあります https://github.com/gradle/gradle/issues/14760 。この問題が修正されれば、excludes"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:447
+#, fuzzy
 msgid "Exclude all classes in `org/example/package` package"
-msgstr ""
+msgstr "`org/example/package` パッケージのすべてのクラスを除外します。"
 
 #. type: Title ==
 #: upstream/_guides/tests-with-coverage.adoc:449
