--- a/l10n/po/ja_JP/_guides/upx.adoc.po
+++ b/l10n/po/ja_JP/_guides/upx.adoc.po
@@ -21,92 +21,105 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/upx.adoc:7
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Compressing native executables using UPX"
-msgstr ""
+msgstr "UPXによるネイティブな実行ファイルの圧縮"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:14
+#, fuzzy
 msgid "https://upx.github.io/[Ultimate Packer for eXecutables (UPX)] is a compression tool reducing the size of executables.  Quarkus can compress the produced native executable to reduce its size.  Such compression is interesting when:"
-msgstr ""
+msgstr "link:https://upx.github.io/[Ultimate Packer for eXecutables（UPX）]は、実行ファイルのサイズを小さくする圧縮ツールです。Quarkusでは、生成されたネイティブの実行ファイルを圧縮して、そのサイズを小さくすることができます。このような圧縮は次のような場合に興味深いものです。"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:16
+#, fuzzy
 msgid "building CLI tools, and you want to reduce the disk footprint,"
-msgstr ""
+msgstr "CLIツールを構築する際に、ディスクのフットプリントを減らしたいと考えています。"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:17
+#, fuzzy
 msgid "building small container images."
-msgstr ""
+msgstr "小さなコンテナを作るイメージ。"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:19
+#, fuzzy
 msgid "Note that UPX compression:"
-msgstr ""
+msgstr "なお、UPX圧縮は"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:21
+#, fuzzy
 msgid "increases your build time, mainly if you use high-compression levels"
-msgstr ""
+msgstr "主に高圧縮レベルを使用した場合、ビルドタイムが長くなります。"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:22
+#, fuzzy
 msgid "increases the startup RSS usage of the application"
-msgstr ""
+msgstr "アプリケーションの起動時のRSS使用量の増加"
 
 #. type: Title ==
 #: upstream/_guides/upx.adoc:23
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "System vs. Container"
-msgstr ""
+msgstr "システムvs.コンテナ"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:26
+#, fuzzy
 msgid "The UPX compression requires:"
-msgstr ""
+msgstr "UPX圧縮には、以下のような条件があります。"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:28
+#, fuzzy
 msgid "the `upx` command to be available in the system `PATH`;"
-msgstr ""
+msgstr "`upx` のコマンドをシステムで利用できるようにする `PATH` 。"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:29
+#, fuzzy
 msgid "or to have built the native executable using an in-container build."
-msgstr ""
+msgstr "または、インコンテナービルドでネイティブの実行ファイルをビルドした場合。"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:32
+#, fuzzy
 msgid "If you have the `upx` command available on your path, Quarkus uses it.  Otherwise, if you built the native image using an in-container build (using `quarkus.native.container-build=true`) and if the builder image provides the `upx` command, Quarkus compresses the executable from inside the container."
-msgstr ""
+msgstr "パス上に `upx` コマンドがある場合は、Quarkusはそれを使用します。そうでない場合は、コンテナ内ビルドを使用してネイティブイメージを構築した場合（ `quarkus.native.container-build=true` を使用）、ビルダーイメージが `upx` コマンドを提供している場合、Quarkusはコンテナ内から実行ファイルを圧縮します。"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:34
+#, fuzzy
 msgid "If you are not in one of these cases, the compression fails."
-msgstr ""
+msgstr "これらのケースに該当しない場合、圧縮は失敗します。"
 
 #. type: Block title
 #: upstream/_guides/upx.adoc:36
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "upx is cross-platform."
-msgstr ""
+msgstr "upxはクロスプラットフォームです。"
 
 #. type: delimited block =
 #: upstream/_guides/upx.adoc:39
+#, fuzzy
 msgid "`upx` can compress executables using a different architecture and OS than your host machine. For example, `upx` on a MacOS X machine can compress a Linux 64bits executables."
-msgstr ""
+msgstr "`upx` は、ホストマシンとは異なるアーキテクチャやOSを使用している実行ファイルを圧縮することができます。例えば、MacOS X マシン上の `upx` は、Linux 64bits の実行ファイルを圧縮することができます。"
 
 #. type: Title ==
 #: upstream/_guides/upx.adoc:41
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Configuring the UPX compression"
-msgstr ""
+msgstr "UPX圧縮の設定"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:44
+#, fuzzy
 msgid "Then, in your application configuration, enable the compression by configuring the _compression level_ you want:"
-msgstr ""
+msgstr "その後、アプリケーションの設定で、必要な _圧縮レベル_を設定して圧縮を有効にします。"
 
 #. type: delimited block -
 #: upstream/_guides/upx.adoc:48
@@ -116,45 +129,51 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:52
+#, fuzzy
 msgid "If the compression level is not set, the compression is disabled.  The compression will happen once the native executable is built and will replace the executable."
-msgstr ""
+msgstr "圧縮レベルが設定されていない場合は、圧縮が無効になります。圧縮は、ネイティブの実行ファイルがビルドされた時点で行われ、実行ファイルを置き換えます。"
 
 #. type: Title ==
 #: upstream/_guides/upx.adoc:53
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Compression level"
-msgstr ""
+msgstr "圧縮レベル"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:56
+#, fuzzy
 msgid "The compression level goes from 1 to 10:"
-msgstr ""
+msgstr "圧縮レベルは1から10まであります。"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:58
+#, fuzzy
 msgid "`1`: faster compression"
-msgstr ""
+msgstr "`1`: より速い圧縮"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:59
+#, fuzzy
 msgid "`9`: better compression"
-msgstr ""
+msgstr "`9`: より良い圧縮"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:60
+#, fuzzy
 msgid "`10`: best compression (can be slow for big files)"
-msgstr ""
+msgstr "`10`: 最高の圧縮率（大きなファイルでは遅い場合があります。）"
 
 #. type: Title ==
 #: upstream/_guides/upx.adoc:61
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Extra parameters"
-msgstr ""
+msgstr "追加パラメータ"
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:65
+#, fuzzy
 msgid "You can pass extra parameter to upx, such as `--brute` or `--ultra-brute` using the `quarkus.native.compression.additional-args` parameter.  The value is a comma-separated list of arguments:"
-msgstr ""
+msgstr "`quarkus.native.compression.additional-args` パラメータを使って `--brute` や `--ultra-brute` のように、追加のパラメータを upx に渡すことができます。この値は、コンマで区切られた引数のリストです。"
 
 #. type: delimited block -
 #: upstream/_guides/upx.adoc:70
@@ -166,5 +185,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/upx.adoc:72
+#, fuzzy
 msgid "The exhaustive list of parameters can be found in https://github.com/upx/upx/blob/devel/doc/upx.pod[the UPX documentation]."
-msgstr ""
+msgstr "パラメータの一覧は、 link:https://github.com/upx/upx/blob/devel/doc/upx.pod[UPXのマニュアル]に記載されています。"
