--- a/l10n/po/ja_JP/_guides/kogito-dev-services-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito-dev-services-build-time-config.adoc.po
@@ -18,30 +18,31 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:3
+#, fuzzy
 msgid "icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime"
-msgstr ""
+msgstr "[<span class=\"icon\">ロック]</span>ビルド時に固定される設定プロパティ - その他の設定プロパティはランタイムでオーバーライド可能です。"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "[[quarkus-kogito-dev-services-build-time-config_configuration]]link:#quarkus-kogito-dev-services-build-time-config_configuration[Configuration property]"
-msgstr ""
+msgstr "link:[, id=quarkus-kogito-dev-services-build-time-config_configuration] link:#quarkus-kogito-dev-services-build-time-config_configuration[設定プロパティ]"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:9
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:11
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:16
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.enabled]]`link:#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.enabled[quarkus.kogito.devservices.enabled]`\n"
 "\n"
@@ -49,25 +50,25 @@ msgid ""
 "--\n"
 "If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default, unless there is an existing configuration present. When DevServices is enabled Quarkus will attempt to automatically configure and start a Data Index when running in Dev mode.\n"
 "--"
-msgstr ""
+msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.enabled] `&lt;a href=\"#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.enabled\"&gt;quarkus.kogito.devservices.enabled&lt;/a&gt;`"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:17
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:44
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "ブーリアン"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:20
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:46
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "true"
-msgstr ""
+msgstr "真"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:25
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.image-name]]`link:#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.image-name[quarkus.kogito.devservices.image-name]`\n"
 "\n"
@@ -75,24 +76,24 @@ msgid ""
 "--\n"
 "The container image name to use.\n"
 "--"
-msgstr ""
+msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.image-name] `&lt;a href=\"#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.image-name\"&gt;quarkus.kogito.devservices.image-name&lt;/a&gt;`"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:26
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:52
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "string"
-msgstr ""
+msgstr "ストリング"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:29
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "quay.io/kiegroup/kogito-data-index-ephemeral"
-msgstr ""
+msgstr "quay.io/kiegroup/kogito-data-index-ephemeral"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:35
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.port]]`link:#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.port[quarkus.kogito.devservices.port]`\n"
 "\n"
@@ -101,23 +102,23 @@ msgid ""
 "Optional fixed port the dev service will listen to.\n"
 "If not defined, the port will be chosen randomly.\n"
 "--"
-msgstr ""
+msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.port] `&lt;a href=\"#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.port\"&gt;quarkus.kogito.devservices.port&lt;/a&gt;`"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:36
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:38
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "8180"
-msgstr ""
+msgstr "8180"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:43
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.shared]]`link:#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.shared[quarkus.kogito.devservices.shared]`\n"
 "\n"
@@ -125,11 +126,11 @@ msgid ""
 "--\n"
 "Indicates if the Data Index instance managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Kogito starts a new container. The discovery uses the `kogito-dev-service-data-index` label. The value is configured using the service-name property. Container sharing is only used in dev mode.\n"
 "--"
-msgstr ""
+msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.shared] `&lt;a href=\"#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.shared\"&gt;quarkus.kogito.devservices.shared&lt;/a&gt;`"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:51
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.service-name]]`link:#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.service-name[quarkus.kogito.devservices.service-name]`\n"
 "\n"
@@ -137,10 +138,10 @@ msgid ""
 "--\n"
 "The value of the `kogito-dev-service-data-index` label attached to the started container. This property is used when shared is set to true. In this case, before starting a container, Dev Services for Kogito looks for a container with the `kogito-dev-service-data-index` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise it starts a new container with the `kogito-dev-service-data-index` label set to the specified value. This property is used when you need multiple shared Data Index instances.\n"
 "--"
-msgstr ""
+msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.service-name] `&lt;a href=\"#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.service-name\"&gt;quarkus.kogito.devservices.service-name&lt;/a&gt;`"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:54
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "kogito-data-index"
-msgstr ""
+msgstr "kogito-data-index"
