--- a/l10n/po/ja_JP/_versions/main/guides/guides.md.po
+++ b/l10n/po/ja_JP/_versions/main/guides/guides.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:40+0000\n"
+"POT-Creation-Date: 2021-12-22 17:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -31,5 +31,5 @@ msgstr ""
 #. type: YAML Front Matter: title
 #: upstream/_versions/main/guides/guides.md:1
 #, no-wrap
-msgid "Quarkus - Guides"
+msgid "Guides - Main branch (SNAPSHOT)"
 msgstr ""
