--- a/l10n/po/ja_JP/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc.po
@@ -99,7 +99,7 @@ msgstr ""
 #: upstream/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc:27
 #, no-wrap
 msgid "Migration Guide"
-msgstr ""
+msgstr "移行ガイド"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc:30
@@ -110,7 +110,7 @@ msgstr ""
 #: upstream/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc:31
 #, no-wrap
 msgid "What's new?"
-msgstr ""
+msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc:33
@@ -311,7 +311,7 @@ msgstr ""
 #: upstream/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc:131
 #, no-wrap
 msgid "Contributors"
-msgstr ""
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc:135
@@ -327,34 +327,34 @@ msgstr ""
 #: upstream/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc:138
 #, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc:141
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr ""
+msgstr "私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非お願いします。一緒に素晴らしいものを作り上げていきましょう!"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc:143
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr ""
+msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい!:"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc:145
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc:146
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr ""
+msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc:147
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc:147
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr ""
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
