--- a/l10n/po/ja_JP/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-22 17:11+0000\n"
+"POT-Creation-Date: 2021-12-22 18:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -283,7 +283,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc:113
-msgid "Until now, we generated all projects with Java 11.  We now generate Java 17 projects if the project is generated with Java 17."
+msgid "Until now, we generated all projects with Java 11 as the compilation source/target.  We now define the compilation source/target as Java 17 for projects generated using Java 17."
 msgstr ""
 
 #. type: Plain text
