Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-22 02:24+0000\n"
+"POT-Creation-Date: 2021-12-24 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -4799,7 +4799,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:1001
 #, no-wrap
-msgid "`docker.io/apicurio/apicurio-registry-mem:2.1.3.Final`"
+msgid "`docker.io/apicurio/apicurio-registry-mem:2.1.5.Final`"
 msgstr ""
 
 #. type: Table
@@ -25668,7 +25668,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The container image name to use, for container based DevServices providers. Image with a WildFly based Keycloak distribution is used by default. Image with a Quarkus based Keycloak-X distribution can be selected instead, for example: 'quay.io/keycloak/keycloak-x:15.0.2'. \n"
+"The container image name to use, for container based DevServices providers. Image with a Quarkus based Keycloak-X distribution is used by default. Image with a WildFly based Keycloak distribution can be selected instead, for example: 'quay.io/keycloak/keycloak:16.0.0'. \n"
 " Note Keycloak-X and Keycloak images are initialized differently. By default, Dev Services for Keycloak will assume it is a Keycloak-X image if the image name contains a 'keycloak-x' string. Set 'quarkus.devservices.keycloak.keycloak-x-image' to override this check.\n"
 "--"
 msgstr ""
@@ -25676,7 +25676,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:15728
 #, no-wrap
-msgid "`quay.io/keycloak/keycloak:15.0.2`"
+msgid "`quay.io/keycloak/keycloak-x:16.0.0`"
 msgstr ""
 
 #. type: Table
