--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-21 02:20+0000\n"
+"POT-Creation-Date: 2021-12-24 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -665,7 +665,7 @@ msgid ""
 "        cfg.setAuthServerUrl(\"http://localhost:8081/auth/realms/quarkus/\");\n"
 "        cfg.setClientId(\"quarkus\");\n"
 "        cfg.getCredentials().setSecret(\"secret\");\n"
-"        Uni<OidcClient> client = clients.newClient(config);\n"
+"        Uni<OidcClient> client = clients.newClient(cfg);\n"
 "        // use this client to get the token\n"
 "    }\n"
 "}\n"
